--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "response.content"
+    "# response.content"
    ]
   },
   {
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "dates"
+    "# dates"
    ]
   },
   {
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "response.content"
+    "# response.content"
    ]
   },
   {
@@ -3019,7 +3019,7 @@
     }
    ],
    "source": [
-    "observs"
+    "# observs"
    ]
   },
   {
@@ -3387,7 +3387,7 @@
     }
    ],
    "source": [
-    "response.content"
+    "# response.content"
    ]
   },
   {
@@ -4885,7 +4885,7 @@
     }
    ],
    "source": [
-    "pieces"
+    "# pieces"
    ]
   },
   {
